fixed the overlapping of button in mobile size. and almost game is complete but animations improvement and audio is remaining to add but for now it is complete and ready to play.

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body{
     text-align: center;
     padding: 0.5rem;
     font-size: 1.5rem;
-    color: --o4;
+    color: var(max-height);
     background-color: var(--o6);
     border: 2px solid --o1;
 }
@@ -187,7 +187,7 @@ button:hover{
 }
 
 
-@media screen and (min-width: 300px) and (max-width: 600px) and (max-height:910px){
+@media screen and (min-width: 280px) and (max-width: 600px) and (max-height:910px){
     .game-title{
         font-size: 0.7rem;
         height: 5vh;
@@ -225,7 +225,7 @@ button:hover{
        width: 4rem;
        height: 3rem;
        padding: 0;
-        margin: 1rem;
+        margin: 0 1rem;
         font-size: 0.9rem;
         position: relative;
         bottom: -5rem;
